--- a/exercise-1/package.json
+++ b/exercise-1/package.json
@@ -18,11 +18,13 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/eslint-config-prettier": "^6.11.3",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.1.7",
+    "eslint-config-prettier": "^10.0.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
