--- a/exercise-2/package.json
+++ b/exercise-2/package.json
@@ -10,6 +10,8 @@
 		"format": "npx prettier --write ."
 	},
 	"dependencies": {
+		"@capacitor/cli": "^7.0.1",
+		"@capacitor/core": "^7.0.1",
 		"next": "15.1.7",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
