feat: capacitor camera

--- a/exercise-2/package.json
+++ b/exercise-2/package.json
@@ -10,11 +10,21 @@
 		"format": "npx prettier --write ."
 	},
 	"dependencies": {
+		"@capacitor/android": "^7.0.1",
+		"@capacitor/camera": "^7.0.0",
 		"@capacitor/cli": "^7.0.1",
 		"@capacitor/core": "^7.0.1",
+		"@capacitor/ios": "^7.0.1",
+		"@emotion/react": "^11.14.0",
+		"@emotion/styled": "^11.14.0",
+		"@mui/icons-material": "^6.4.5",
+		"@mui/material": "^6.4.5",
+		"@mui/material-nextjs": "^6.4.3",
+		"@mui/styled-engine-sc": "^6.4.3",
 		"next": "15.1.7",
 		"react": "^19.0.0",
-		"react-dom": "^19.0.0"
+		"react-dom": "^19.0.0",
+		"styled-components": "^6.1.15"
 	},
 	"devDependencies": {
 		"@eslint/eslintrc": "^3",
